Fixed input on iOS

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -44,9 +44,9 @@ nav {
 	color: var(--white);
 	border-radius: 15px;
 	padding-left: 14px;
-	background-color: transparent;
-	backdrop-filter: blur(11px) brightness(12) opacity(0.3);
-	-webkit-backdrop-filter: blur(11px) brightness(12) opacity(0.3);
+	background-color: rgba(255, 255, 255, 0.4);
+	backdrop-filter: blur(15px);
+	-webkit-backdrop-filter: blur(15px);
 }
 
 .song-form input {
